Fix tooltip placement in non-table metrics on mobile.

--- a/assets/sass/components/key-metrics/_googlesitekit-km-widget-tile.scss
+++ b/assets/sass/components/key-metrics/_googlesitekit-km-widget-tile.scss
@@ -153,6 +153,17 @@
 		}
 	}
 
+	.googlesitekit-km-widget-tile--numeric,
+	.googlesitekit-km-widget-tile--text {
+		.googlesitekit-km-widget-tile__title-container {
+			flex-direction: column;
+
+			@media (min-width: $bp-nonMobile) {
+				flex-direction: row;
+			}
+		}
+	}
+
 	.googlesitekit-km-widget-tile__loading .googlesitekit-km-widget-tile__loading-body {
 		margin-top: 10px;
 	}
